# InfiniTAM

./: .gitignore  InfiniTAM.VC.db  readme.txt
Datagenerator/: 000.tif  001.tif  0010.tif  0011.tif  0012.tif  0013.tif  0014.tif  0015.tif  0016.tif  0017.tif  0018.tif  0019.tif  002.tif  0020.tif  0021.tif  0022.tif  0023.tif  0024.tif  0025.tif  0026.tif  0027.tif  0028.tif  0029.tif  003.tif  0030.tif  0031.tif  0032.tif  0033.tif  0034.tif  0035.tif  0036.tif  004.tif  005.tif  006.tif  007.tif  008.tif  009.tif  README  Simple_0.sl  Simple_0.slo  (+52 more)
Datagenerator/dino_textures/: bluelight.tex  orangelight.tex  roughness.1001.tex  whitelight.tex
Datagenerator/tif2pgm/: tif2pgm.sln
Datagenerator/tif2pgm/tif2pgm/: Form1.Designer.cs  Form1.cs  PGMSave.cs  Program.cs  tif2pgm.csproj
Datagenerator/tif2pgm/tif2pgm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp
InfiniTAM/Engine/: CLIEngine.cpp  CMakeLists.txt  ImageSourceEngine.cpp  ImageSourceEngine.h  RealsenseEngineSDK.cpp  RealsenseEngineSDK.h  UIEngine.cpp  UIEngine.h  calibrate.cpp  calibrate.h
InfiniTAM/Files/: calib.txt
InfiniTAM/ITMLib/: CMakeLists.txt  ITMLib.h
InfiniTAM/ITMLib/Engine/: ITMMainEngine.cpp  ITMMainEngine.h  ITMViewBuilder.h
InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMDepthTracker.h  ITMPixelUtils.h  ITMViewBuilder.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMMeshingEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.cpp  ITMViewBuilder_CPU.cpp  ITMViewBuilder_CPU.h
InfiniTAM/ITMLib/MeshFusion/: CMakeLists.txt  EstimatePose.cpp  Label.cpp  MFDepthTracker.cpp  MFDepthTracker.h  MFTrackerGH.h  MeshFusion.cpp  MeshFusion.h  MeshUpdate.cpp  MyTri.cpp  MyTri.h  ReCoordinateSystem.cpp  Tracker.cpp  Tracker.h  domainsurface.cpp  domainsurface.h  downSample.cpp  edgeRefine.cpp  goodFeature.cpp  makeTri.cpp  meshMerge.cpp  patchSurface.cpp  refinePose.cpp  rigid_transformPose.cpp  think.txt
InfiniTAM/ITMLib/Objects/: ITMMesh.h  ITMPose.cpp  ITMView.h  MeshFusion.cpp  MeshFusion.h
InfiniTAM/ITMLib/Utils/: ITMCalibIO.cpp  ITMLibSettings.cpp
InfiniTAM/Utils/: FileUtils.cpp  FileUtils.h
